--- a/soft/base/SB.ioc
+++ b/soft/base/SB.ioc
@@ -23,7 +23,35 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
 Dma.Request1=TIM1_CH1
-Dma.RequestsNb=2
+Dma.Request2=SDIO_RX
+Dma.Request3=SDIO_TX
+Dma.RequestsNb=4
+Dma.SDIO_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.2.Instance=DMA2_Stream3
+Dma.SDIO_RX.2.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.2.Mode=DMA_PFCTRL
+Dma.SDIO_RX.2.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.3.Instance=DMA2_Stream6
+Dma.SDIO_TX.3.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.3.Mode=DMA_PFCTRL
+Dma.SDIO_TX.3.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.TIM1_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH1.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM1_CH1.1.Instance=DMA2_Stream1
@@ -34,23 +62,40 @@ Dma.TIM1_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.TIM1_CH1.1.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_CH1.1.Priority=DMA_PRIORITY_LOW
 Dma.TIM1_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FATFS.BSP.number=1
+FATFS.IPParameters=USE_DMA_CODE_SD,_MAX_SS
+FATFS.USE_DMA_CODE_SD=0
+FATFS._MAX_SS=4096
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=Unknown
+FATFS0.BSP.component=
+FATFS0.BSP.condition=
+FATFS0.BSP.i2caddr=0
+FATFS0.BSP.i2creg=
+FATFS0.BSP.instance=PC4
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.semaphore=
+FATFS0.BSP.solution=PC4
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=TIM3
-Mcu.IP11=USART1
-Mcu.IP12=USART2
+Mcu.IP10=TIM1
+Mcu.IP11=TIM3
+Mcu.IP12=USART1
+Mcu.IP13=USART2
 Mcu.IP2=DMA
-Mcu.IP3=I2C1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RNG
-Mcu.IP7=SDIO
-Mcu.IP8=SYS
-Mcu.IP9=TIM1
-Mcu.IPNb=13
+Mcu.IP3=FATFS
+Mcu.IP4=I2C1
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RNG
+Mcu.IP8=SDIO
+Mcu.IP9=SYS
+Mcu.IPNb=14
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA2
@@ -71,10 +116,11 @@ Mcu.Pin21=PB7
 Mcu.Pin22=PB8
 Mcu.Pin23=PB9
 Mcu.Pin24=VP_CRC_VS_CRC
-Mcu.Pin25=VP_RNG_VS_RNG
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin25=VP_FATFS_VS_SDIO
+Mcu.Pin26=VP_RNG_VS_RNG
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA5
 Mcu.Pin4=PC4
 Mcu.Pin5=PC5
@@ -82,7 +128,7 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB11
 Mcu.Pin8=PB14
 Mcu.Pin9=PC8
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -91,6 +137,8 @@ MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -98,6 +146,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -243,6 +292,8 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=192000000
+SDIO.ClockDiv=250
+SDIO.IPParameters=ClockDiv
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
@@ -266,6 +317,8 @@ USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_Systick.Mode=SysTick
