--- a/soft/base/SB.ioc
+++ b/soft/base/SB.ioc
@@ -90,11 +90,12 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=SYS
-Mcu.IP11=TIM1
-Mcu.IP12=TIM3
-Mcu.IP13=USART1
-Mcu.IP14=USART3
+Mcu.IP10=SDIO
+Mcu.IP11=SYS
+Mcu.IP12=TIM1
+Mcu.IP13=TIM3
+Mcu.IP14=USART1
+Mcu.IP15=USART3
 Mcu.IP2=DMA
 Mcu.IP3=FATFS
 Mcu.IP4=I2C1
@@ -102,44 +103,48 @@ Mcu.IP5=IWDG
 Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=RNG
-Mcu.IP9=SDIO
-Mcu.IPNb=15
+Mcu.IP9=RTC
+Mcu.IPNb=16
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
-Mcu.Pin0=PH1-OSC_OUT
-Mcu.Pin1=PC3
-Mcu.Pin10=PC7
-Mcu.Pin11=PC8
-Mcu.Pin12=PC9
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PC10
-Mcu.Pin19=PC11
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PC12
-Mcu.Pin21=PD2
-Mcu.Pin22=PB6
-Mcu.Pin23=PB7
-Mcu.Pin24=PB8
-Mcu.Pin25=VP_ADC1_TempSens_Input
-Mcu.Pin26=VP_CRC_VS_CRC
-Mcu.Pin27=VP_FATFS_VS_SDIO
-Mcu.Pin28=VP_IWDG_VS_IWDG
-Mcu.Pin29=VP_RNG_VS_RNG
-Mcu.Pin3=PA1
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PC4
-Mcu.Pin9=PB10
-Mcu.PinsNb=33
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PC4
+Mcu.Pin11=PB10
+Mcu.Pin12=PC7
+Mcu.Pin13=PC8
+Mcu.Pin14=PC9
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
+Mcu.Pin2=PH1-OSC_OUT
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PD2
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8
+Mcu.Pin27=VP_ADC1_TempSens_Input
+Mcu.Pin28=VP_CRC_VS_CRC
+Mcu.Pin29=VP_FATFS_VS_SDIO
+Mcu.Pin3=PC3
+Mcu.Pin30=VP_IWDG_VS_IWDG
+Mcu.Pin31=VP_RNG_VS_RNG
+Mcu.Pin32=VP_RTC_VS_RTC_Activate
+Mcu.Pin33=VP_RTC_VS_RTC_Calendar
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -215,6 +220,10 @@ PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDIO_D3
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDIO_CK
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=LED1
 PC3.Locked=true
@@ -263,7 +272,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_CRC_Init-CRC-false-HAL-true,11-MX_RNG_Init-RNG-false-HAL-true,12-MX_FATFS_Init-FATFS-false-HAL-false,13-MX_IWDG_Init-IWDG-false-HAL-true,14-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_CRC_Init-CRC-false-HAL-true,11-MX_RNG_Init-RNG-false-HAL-true,12-MX_FATFS_Init-FATFS-false-HAL-false,13-MX_IWDG_Init-IWDG-false-HAL-true,14-MX_USART3_UART_Init-USART3-false-HAL-true,15-MX_RTC_Init-RTC-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=48000000
@@ -281,8 +290,7 @@ RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
-RCC.LSE_VALUE=32768
+RCC.IPParameters=48MHZClocksFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=96000000
 RCC.PLLCLKFreq_Value=96000000
@@ -297,6 +305,10 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=192000000
+RTC.Format=RTC_FORMAT_BIN
+RTC.IPParameters=Format,Year,WeekDay
+RTC.WeekDay=RTC_WEEKDAY_FRIDAY
+RTC.Year=20
 SDIO.ClockDiv=250
 SDIO.IPParameters=ClockDiv
 SH.ADCx_IN4.0=ADC1_IN4,IN4
@@ -331,6 +343,10 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
