--- a/soft/base/SB.ioc
+++ b/soft/base/SB.ioc
@@ -111,40 +111,41 @@ Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PC4
 Mcu.Pin11=PB10
-Mcu.Pin12=PC7
-Mcu.Pin13=PC8
-Mcu.Pin14=PC9
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin12=PB11
+Mcu.Pin13=PC7
+Mcu.Pin14=PC8
+Mcu.Pin15=PC9
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA13
 Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin20=PC10
-Mcu.Pin21=PC11
-Mcu.Pin22=PC12
-Mcu.Pin23=PD2
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PB8
-Mcu.Pin27=VP_ADC1_TempSens_Input
-Mcu.Pin28=VP_CRC_VS_CRC
-Mcu.Pin29=VP_FATFS_VS_SDIO
+Mcu.Pin20=PA14
+Mcu.Pin21=PC10
+Mcu.Pin22=PC11
+Mcu.Pin23=PC12
+Mcu.Pin24=PD2
+Mcu.Pin25=PB6
+Mcu.Pin26=PB7
+Mcu.Pin27=PB8
+Mcu.Pin28=VP_ADC1_TempSens_Input
+Mcu.Pin29=VP_CRC_VS_CRC
 Mcu.Pin3=PC3
-Mcu.Pin30=VP_IWDG_VS_IWDG
-Mcu.Pin31=VP_RNG_VS_RNG
-Mcu.Pin32=VP_RTC_VS_RTC_Activate
-Mcu.Pin33=VP_RTC_VS_RTC_Calendar
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=VP_FATFS_VS_SDIO
+Mcu.Pin31=VP_IWDG_VS_IWDG
+Mcu.Pin32=VP_RNG_VS_RNG
+Mcu.Pin33=VP_RTC_VS_RTC_Activate
+Mcu.Pin34=VP_RTC_VS_RTC_Calendar
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -205,6 +206,10 @@ PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.Mode=Half_duplex(single_wire_mode)
 PB10.Signal=USART3_TX
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=WS2812_ENABLE
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
