--- a/soft/base/SB.ioc
+++ b/soft/base/SB.ioc
@@ -109,9 +109,9 @@ Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PC4
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB12
 Mcu.Pin13=PC7
 Mcu.Pin14=PC8
 Mcu.Pin15=PC9
@@ -141,10 +141,10 @@ Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PC4
 Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -182,11 +182,6 @@ PA13.Locked=true
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA2.GPIO_Label=BTN3
-PA2.GPIO_PuPd=GPIO_PULLUP
-PA2.Locked=true
-PA2.Signal=GPIO_Input
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=LED3
 PA3.Locked=true
@@ -210,6 +205,11 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=WS2812_ENABLE
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB12.GPIO_Label=BTN3
+PB12.GPIO_PuPd=GPIO_PULLUP
+PB12.Locked=true
+PB12.Signal=GPIO_Input
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
